--- a/platforms/android/assets/www/html/newsPhoto.html
+++ b/platforms/android/assets/www/html/newsPhoto.html
@@ -20,10 +20,13 @@
         <i class="thumbs outline up large icon"></i>
         <font id="likeCount">{{new.data.likeCount}}</font>
       </div>
-      <div class="newsDate">{{new.data.date}}</div>
+      <div class="newsDate">{{new.data.date | date:'MM/dd/yyyy'}}</br>{{new.data.date | date:'HH:mm'}}</div>
     </div>
     <div id="newsFooterBtns" class="ui fluid buttons">
-      <button class="ui button">Beğen</button>
+      <button class="ui button" ng-click="new.like()">
+        <span ng-show="!new.isLike">Beğen</span>
+        <span ng-show="new.isLike">vazgeç</span>
+      </button>
       <button class="ui button" ng-click="page.OpenYorumPage(new.data.yorumData)">Yorum Yap</button>
     </div>
   </div>
