--- a/platforms/android/assets/www/html/activityPage.html
+++ b/platforms/android/assets/www/html/activityPage.html
@@ -13,27 +13,22 @@
         </div>
       </div></br>
       <label>Etinlik Adı :</label>
-      <textarea class="shareText" rows="1" cols="45" placeholder="Etkinlik adını gir.."></textarea>
+      <textarea  id="shareTextActivity" class="shareText" rows="1" cols="45" placeholder="Etkinlik adını gir.."></textarea>
       <label>Etinlik Tarihi :</label>
-      <select class="ui dropdown">
-        <option value="1">Ocak</option>
-        <option value="2">Subat</option>
-        <option value="3">Mart</option>
-        <option value="4">Nisan</option>
-        <option value="5">Mayıs</option>
-        <option value="6">Haziran</option>
-        <option value="7">Temmuz</option>
-        <option value="8">Ağustos</option>
-        <option value="9">Eylül</option>
-        <option value="10">Ekim</option>
-        <option value="11">Kasım</option>
-        <option value="12">Aralık</option>
-      </select>
+      <input id="datepicker" type="text" required/>
+      <label>Etinlik Yeri :</label>
+      <input id="yer" type="text">
     </div>
-    <button class="shareButton blue fluid ui button">Etkinlik Oluştur</button>
+    <button class="shareButton blue fluid ui button" ng-click="page.CreateActivityShare()">Etkinlik Oluştur</button>
     <button class="shareBackButton fluid ui button" ng-click="page.CloseActivityPage()">İptal</button>
   </div>
+  <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
+  <link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
   <script>
+  //$( "#datepicker" ).datepicker();
+
+  $(document).ready(function(){ $("#datepicker").datepicker(); });
+
   $('.ui.dropdown').dropdown({
   onChange: function() {
    if($('.activity.text').text()[0] == "A")
