--- a/www/html/newsActivity.html
+++ b/www/html/newsActivity.html
@@ -22,14 +22,17 @@
       <div class="newsLike">
         <i class="eye large icon"></i>
         <font id="viewCount">{{new.data.viewCount}} &nbsp</font>
-        <i class="thumbs outline up large icon"></i>
+        <i class="users outline up large icon"></i>
         <font id="likeCount">{{new.data.likeCount}}</font>
       </div>
       <div class="newsDate">{{new.data.date | date:'MM/dd/yyyy'}}</br>{{new.data.date | date:'HH:mm'}}</div>
     </div>
     <div id="newsFooterBtns" class="ui fluid buttons">
-      <button class="ui button">Katıl</button>
-      <button class="ui button" ng-click="page.OpenYorumPage(new.data.yorumData)">Yorum Yap</button>
+      <button class="ui button" ng-click="new.like()">
+        <span ng-show="!new.isLike">Katıl</span>
+        <span ng-show="new.isLike">vazgeç</span>
+      </button>
+      <button class="ui button" ng-click="page.OpenYorumPage(new.data._id,new.data.yorumData)">Yorum Yap</button>
     </div>
   </div>
 </div>
