--- a/www/html/newsPhoto.html
+++ b/www/html/newsPhoto.html
@@ -23,8 +23,11 @@
       <div class="newsDate">{{new.data.date | date:'MM/dd/yyyy'}}</br>{{new.data.date | date:'HH:mm'}}</div>
     </div>
     <div id="newsFooterBtns" class="ui fluid buttons">
-      <button class="ui button">Beğen</button>
-      <button class="ui button" ng-click="page.OpenYorumPage(new.data.yorumData)">Yorum Yap</button>
+      <button class="ui button" ng-click="new.like()">
+        <span ng-show="!new.isLike">Beğen</span>
+        <span ng-show="new.isLike">vazgeç</span>
+      </button>
+      <button class="ui button" ng-click="page.OpenYorumPage(new.data._id,new.data.yorumData)">Yorum Yap</button>
     </div>
   </div>
 </div>
