I've fixed create Yorum :)

--- a/www/html/newsText.html
+++ b/www/html/newsText.html
@@ -23,7 +23,7 @@
         <span ng-show="!new.isLike">Beğen</span>
         <span ng-show="new.isLike">vazgeç</span>
       </button>
-      <button class="ui button" ng-click="page.OpenYorumPage(new.data._id,new.data.yorumData)" >Yorum Yap</button>
+      <button class="ui button" ng-click="page.OpenYorumPage(new.data._id)" >Yorum Yap</button>
     </div>
   </div>
 </div>
