--- a/platforms/android/assets/www/html/newsActivity.html
+++ b/platforms/android/assets/www/html/newsActivity.html
@@ -32,7 +32,7 @@
         <span ng-show="!new.isLike">Katıl</span>
         <span ng-show="new.isLike">vazgeç</span>
       </button>
-      <button class="ui button" ng-click="page.OpenYorumPage(new.data.yorumData)">Yorum Yap</button>
+      <button class="ui button" ng-click="page.OpenYorumPage(new.data._id,new.data.yorumData)">Yorum Yap</button>
     </div>
   </div>
 </div>
