--- a/platforms/android/assets/www/profile.html
+++ b/platforms/android/assets/www/profile.html
@@ -52,8 +52,8 @@
           <share-page></share-page>
           <activity-page></activity-page>
           <span id="newsSlider" ng-controller="newsController as news">
-            <div id="refleshButton" onclick="refleshNewsButton()">
-              <i  class="large undo icon"></i>
+            <div id="refleshNewsButton" class="refleshButton" onclick="refleshNewsButton()">
+              <i  class="large undo icon"> </i>
             </div>
             <div id="scrolltableNews" class="scrollTable" >
               <news-text-table ></news-text-table>
@@ -94,7 +94,7 @@
             </div>
           </div>
           <span id="friendlist" ng-controller="friendListController as friendsTables">
-            <div id="refleshButton" onclick="refleshFriendsButton()">
+            <div id="refleshFriendButton"  class="refleshButton" onclick="refleshFriendsButton()">
               <i  class="large undo icon"></i>
             </div>
             <div id="scrolltableFriends" class="scrollTable" >
